<resources>
    <string name="app_name">나만의 시 목록</string>

    <string name="title1">서시</string>
    <string name="author1">윤동주</string>
    <string name="body1">
        죽는 날까지 하늘을 우러러\n
        한 점 부끄럼이 없기를,\n
        잎새에 이는 바람에도\n
        나는 괴로워했다.\n
        별을 노래하는 마음으로\n
        모든 죽어가는 것을 사랑해야지\n
        그리고 나한테 주어진 길을 걸어가야겠다.\n\n

        오늘 밤에도 별이 바람에 스치운다.\n\n
    </string>

    <string name="title2">독을 차고</string>
    <string name="author2">김영랑</string>
    <string name="body2">
       내 가슴에 독을 찬 지 오래로다
        아직 아무도 해한 일 없는 새로 뽑은 독
        벗은 그 무서운 독 그만 훑어 버리라 한다
        나는 그 독이 벗도 선뜻 해할지 모른다 위협하고
        독 안 차고 살아도 머지않아 너 나 마주 가 버리면
        누억천만 세대가 그 뒤로 잠자코 흘러가고
        나중에 땅덩이 모지라져 모래알이 될 것임을
        "허무한디!" 독은 차서 무엇 하느냐고?

        아! 내 세상에 태어났음을 원망 않고 보낸
        어느 하루가 있었던가, "허무한디!", 허나
        앞뒤로 덤비는 이리 승냥이 바야흐로 내 마음을 노리매
        내 산 채 짐승의 밥이 되어 찢기우고 할퀴우라 내맡긴 신세임을

        나는 독을 차고 선선히 가리라
        막음 날 내 외로운 혼 건지기 위하여여
    </string>


</resources>