<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="#ffffff"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#ffff00"
        android:background="#800080" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author1"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body1"
        android:singleLine="false"
        android:ellipsize="marquee"
        android:textColor="#000000"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#ffff00"
        android:background="#800080" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author2"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="#000000" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body2"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="#000000"
        android:textSize="15sp"/>

</LinearLayout>